--- a/html-freecodecamp.css
+++ b/html-freecodecamp.css
@@ -19,13 +19,6 @@ header {
 }
 */
 
-.containerInputs {
-    border-color: black;
-    border-top: auto;
-    border-bottom: auto;
-    border-left: auto;
-    border-right: auto ;
-}
 
 h2 {
     color: blue;
@@ -34,6 +27,24 @@ h2 {
 h3 {
     color: green;
     font-size: 15px;
+}
+
+.headerDescription {
+
+    font-size: 15px;
+    color: black;
+
+}
+
+
+
+
+.containerInputs {
+    border-color: black;
+    border-top: auto;
+    border-bottom: auto;
+    border-left: auto;
+    border-right: auto ;
 }
 
 .inputs {
@@ -49,9 +60,29 @@ h3 {
     margin-right: 100px
 }
 
-
 .listInputsLabels {
     color:chocolate;
     font-size: 16px;
 
+}
+
+
+.containerForms {
+
+    border-color: black;
+    border-width: auto;;
+
+}
+
+.form-example{
+    display: table;
+    margin: 1px;
+    margin-left: 10px;
+}
+
+
+#subindexForm {
+    color:hotpink;
+    font-size: 20px;
+    display: block;
 }
